Introducing revised curl parser and executor